# Rust_ESP32_Dome

./: .gitignore  LICENSE  README.md  README_CN.md  delete_target.bat  delete_target.ps1  delete_target.sh
.claude/: settings.local.json
dome/I2C_AS5600磁编码/: Cargo.toml
dome/I2C_AS5600磁编码/.cargo/: config.toml
dome/I2C_AS5600磁编码/src/: main.rs
dome/I2C_AS5600磁编码/src/AS5600/: async.rs  blocking.rs  mod.rs
dome/SPI_中文显示/: Cargo.toml  build.rs  教程.md
dome/SPI_中文显示/src/: alimamafont.rs  cxifont.rs  font.rs  lib.rs
dome/SPI_小球下落/: Cargo.toml  教程.md
dome/SPI_月薪猫/: Cargo.toml  font_tool.py  教程.md
dome/SPI_月薪猫/src/: ascii.rs  gif.rs  lib.rs
dome/SPI_正方体/: Cargo.toml  教程.md
dome/SPI_正方体/src/: lib.rs  st7789.rs
examples/: WiFi模式.md
examples/ADC/: 教程.md
examples/ADC/docs/: temperature_sensor.md
examples/ADC_电压/: 教程.md
examples/ADC_电压/src/: lib.rs
examples/AP+STA/: Cargo.toml  教程.md
examples/AP+STA/.claude/: settings.local.json
examples/AP+STA/src/: dhcp.rs  http.rs  led.rs  lib.rs  state.rs  wifi.rs
examples/AP+STA/web/: index.html
examples/BIL_peripheral/: Cargo.toml  教程.md
examples/BIL_peripheral/src/: lib.rs
examples/BLE_扫描/: Cargo.toml  教程.md
examples/I2C/: Cargo.toml  build.rs  教程.md
examples/LED/: Cargo.toml  教程.md
examples/LED/src/: lib.rs
examples/LED呼吸灯/: Cargo.toml  教程.md
examples/LED呼吸灯/.cargo/: config.toml
examples/PWM/: Cargo.toml  教程.md
examples/PWM/src/: lib.rs
examples/SPI/: Cargo.toml  教程.md
examples/SPI/src/: lib.rs  st7789.rs
examples/WIFI-客户端模式/: Cargo.toml  教程.md
examples/WIFI-客户端模式/web/: index.html
examples/hello/: 教程.md
examples/串口/: Cargo.toml  教程.md
examples/外部中断/: Cargo.toml  教程.md
examples/定时器/: Cargo.toml  build.rs  教程.md
examples/按键LED/: Cargo.toml  教程.md
examples/模版/: 教程.md
examples/热点模式/: Cargo.toml  教程.md
examples/热点模式/web/: index.html
examples/热点模式_副本/: 教程.md
examples/监听模式/: Cargo.toml  build.rs  教程.md
examples/监听模式/src/: lib.rs
