[package]
edition      = "2024"
name         = "ap-sta-coex"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "AP-STA配网"
path = "./src/bin/main.rs"

[dependencies]
embassy-executor = "0.10.0"
embassy-net = { version = "0.9.0", features = [
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
  "proto-ipv4",
  "dhcpv4",
] }
embassy-sync = "0.8.0"
embassy-time = "0.5.0"
embedded-io-async = "0.7.0"
critical-section = "1.2.0"
esp-alloc = "0.10.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-hal = { version = "~1.1.0", features = ["esp32s3", "unstable"] }
esp-radio = { version = "0.18.0", features = [
  "coex",
  "esp-alloc",
  "esp32s3",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.3.0", features = [
  "esp-alloc",
  "esp-radio",
  "embassy",
  "esp32s3",
] }
heapless = "0.9"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
static_cell = "2.1.0"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
