[package]
edition      = "2024"
name         = "timer-example"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "timer-example"
path = "./src/bin/main.rs"

[dependencies]
# ── 核心依赖（本示例只需要这几个）──
esp-hal                = { version = "~1.1.0", features = ["esp32s3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
critical-section       = "1.2.0"          # 跨中断的安全互斥原语
panic-rtt-target       = "0.2.0"          # panic 信息通过 RTT 输出
rtt-target             = "0.6.2"          # RTT 调试打印（rprintln!）


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
