[package]
edition      = "2024"
name         = "hello"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "监听模式"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

embassy-executor = "0.10.0"

critical-section = "1.2.0"
esp-alloc = { version = "0.10.0", features = ["global-allocator"] }
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32s3",
  "sniffer",
  "unstable",
  "wifi",
] }

ieee80211 = { version = "0.4.0", default-features = false }

esp-println = { version = "0.14.0", features = ["esp32s3", "log-04"] }
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
